--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,7 +1,9 @@
-# Action Cable uses Redis by default to administer connections, channels, and sending/receiving messages over the WebSocket.
+# Action Cable uses Redis by default to administer connections, channels, 
+#  and sending/receiving messages over the WebSocket.
+
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%=ENV['REDIS_URL']%>
 
 development:
   adapter: async
